--- a/frontend/client/src/index.css
+++ b/frontend/client/src/index.css
@@ -16,3 +16,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+@keyframes rotateY {
+  from {
+    transform: rotateX(360deg);
+  }
+  to {
+    transform: rotateX(0deg);
+  }
+}
+
+.rotate-y {
+  animation: rotateY 0.5s ease-out forwards;
+}
+
