chore : 오류오버레이, 비로그인

--- a/frontend/client/src/index.css
+++ b/frontend/client/src/index.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+body > iframe { display: none }
 body {
   @apply bg-gray-500;
   margin: 0;
