chore : 서버 error 페이지 수정

--- a/backend/src/main/resources/templates/error/404.html
+++ b/backend/src/main/resources/templates/error/404.html
@@ -2,8 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-<!--    <link th:href="@{/css/404.css}" rel="stylesheet" />-->
+    <link th:href="@{static/css/404.css}" rel="stylesheet" />
+    <title></title>
 </head>
+
 <style>
     .page_404{
       padding:40px 0;
@@ -17,11 +19,11 @@
 
     .four_zero_four_bg{
       background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
-      height: 50vh;
+      height: 55vh;
       background-position: center;
       background-size: cover;
       width: 100vh;
-      margin: 20px auto;
+      margin: 10px auto;
     }
 
 
@@ -41,17 +43,18 @@
       display: inline-block;
       font-size: 2em;
       text-decoration:none;
-      border-radius: 30px;
+      border-radius: 10px;
 
      }
 
     .content_box_404{
-      margin-top: 50px;
+      margin-top: 10px;
      }
     .text-center{
         text-align: center;
     }
 </style>
+
 
 <section class="page_404">
     <div class="container">
