--- a/backend/src/main/resources/static/css/404.css
+++ b/backend/src/main/resources/static/css/404.css
@@ -1,34 +1,46 @@
-.page_404{
-  padding:40px 0; background:#fff; font-family: 'Arvo', serif;
-}
+    .page_404{
+      padding:40px 0;
+      background:#fff;
+      font-family: 'Arvo', serif;
+    }
 
-.page_404  img{
-  width:100%;
-  }
+    .page_404 img{
+      width:100%;
+     }
 
-.four_zero_four_bg{
-  background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
-  height: 400px;
-  background-position: center;
-}
+    .four_zero_four_bg{
+      background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
+      height: 50vh;
+      background-position: center;
+      background-size: cover;
+      width: 100vh;
+      margin: 20px auto;
+    }
 
 
-.four_zero_four_bg h1{
-  font-size:80px;
-}
+    .four_zero_four_bg h1{
+      font-size:80px;
+    }
 
-.four_zero_four_bg h3{
-  font-size:80px;
-}
+    .four_zero_four_bg h3{
+      font-size:80px;
+    }
 
-.link_404{
-  color: #fff!important;
-  padding: 10px 20px;
-  background: #39ac31;
-  margin: 20px 0;
-  display: inline-block;
- }
+    .link_404{
+      color: #fff!important;
+      padding: 20px 30px;
+      background: #39ac31;
+      margin: 20px 0;
+      display: inline-block;
+      font-size: 2em;
+      text-decoration:none;
+      border-radius: 30px;
 
-.contant_box_404{
-  margin-top:-50px;
- }
+     }
+
+    .content_box_404{
+      margin-top: 50px;
+     }
+    .text-center{
+        text-align: center;
+    }
