--- a/frontend/client/src/index.css
+++ b/frontend/client/src/index.css
@@ -1,9 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-body > iframe { display: none }
+
+body>iframe {
+  display: none
+}
+
 body {
-  @apply bg-gray-500;
+  background-image: url('./assets/img/bg.png');
+  background-size: cover;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -16,10 +21,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
 @keyframes rotateY {
   from {
     transform: rotateX(360deg);
   }
+
   to {
     transform: rotateX(0deg);
   }
@@ -28,4 +35,3 @@ code {
 .rotate-y {
   animation: rotateY 0.5s ease-out forwards;
 }
-
