--- a/backend/src/main/resources/templates/error/4xx.html
+++ b/backend/src/main/resources/templates/error/4xx.html
@@ -2,50 +2,44 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <!--    <link th:href="@{/css/404.css}" rel="stylesheet" />-->
+    <!--    <link th:href="@{/css/style.css}" rel="stylesheet" />-->
 </head>
 <style>
-    .page_404{
+    .page{
       padding:40px 0;
       background:#fff;
       font-family: 'Arvo', serif;
     }
 
-    .page_404 img{
+    .page img{
       width:100%;
      }
 
     .four_zero_four_bg{
-      background-image: url(https://sitechecker.pro/wp-content/uploads/2023/06/400-status-code.png);
-      height: 55vh;
+      background-image: url(https://cdn.pixabay.com/photo/2018/03/24/22/11/giraffe-3258053_1280.png);
+      height: 60vh;
       background-position: center;
       background-size: cover;
-      width: 100vh;
-      margin: 10px auto;
+      width: 35vh;
+      margin: 20px auto;
     }
-
 
     .four_zero_four_bg h1{
       font-size:80px;
     }
-
     .four_zero_four_bg h3{
       font-size:80px;
     }
-
-    .link_404{
+    .link_home{
       color: #fff!important;
-      padding: 20px 30px;
-      background: #39ac31;
-      margin: 20px 0;
+      padding: 10px 15px;
+      background: #4428107a;
       display: inline-block;
-      font-size: 2em;
+      font-size: 1em;
       text-decoration:none;
-      border-radius: 10px;
-
+      border-radius: 30px;
      }
-
-    .content_box_404{
+    .content_box{
       margin-top: 10px;
      }
     .text-center{
@@ -54,24 +48,20 @@
 
 </style>
 
-<section class="page_404">
+<section class="page">
     <div class="container">
         <div class="row">
             <div class="col-sm-12 ">
                 <div class="col-sm-10 col-sm-offset-1 text-center">
                     <div class="four_zero_four_bg">
-                        <h1 class="text-center "></h1>
-
+                        <h1 class="text-center ">400</h1>
                     </div>
-
-                    <div class="content_box_404">
+                    <div class="content_box">
                         <h3 class="h2">
                             죄송합니다.
                         </h3>
-
                         <p>잘못된 요청입니다.</p>
-
-                        <a href="https://secretzoo.site" class="link_404">홈으로</a>
+                        <a href="https://secretzoo.site" class="link_home">돌아가기</a>
                     </div>
                 </div>
             </div>
