--- a/backend/src/main/resources/templates/error/500.html
+++ b/backend/src/main/resources/templates/error/500.html
@@ -2,29 +2,25 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <!--    <link th:href="@{/css/404.css}" rel="stylesheet" />-->
+    <!--    <link th:href="@{/css/style.css}" rel="stylesheet" />-->
 </head>
 <style>
-    .page_404{
+    .page{
       padding:40px 0;
       background:#fff;
       font-family: 'Arvo', serif;
     }
-
-    .page_404 img{
+    .page img{
       width:100%;
      }
-
     .four_zero_four_bg{
-      background-image: url(https://cdn.dribbble.com/users/114645/screenshots/3116766/media/7595122c5b9eb39628317b60f1bfaf66.gif);
-      height: 50vh;
+      background-image: url(https://cdn.pixabay.com/photo/2018/03/31/02/24/bear-3277204_1280.png);
+      height: 60vh;
       background-position: center;
       background-size: cover;
-      width: 100vh;
+      width: 35vh;
       margin: 20px auto;
     }
-
-
     .four_zero_four_bg h1{
       font-size:80px;
     }
@@ -32,28 +28,24 @@
     .four_zero_four_bg h3{
       font-size:80px;
     }
-
-    .link_404{
+    .link_home{
       color: #fff!important;
-      padding: 20px 30px;
-      background: #39ac31;
-      margin: 20px 0;
+      padding: 10px 15px;
+      background: #4428107a;
       display: inline-block;
-      font-size: 2em;
+      font-size: 1em;
       text-decoration:none;
       border-radius: 30px;
-
      }
-
-    .content_box_404{
-      margin-top: 50px;
+    .content_box{
+      margin-top: 10px;
      }
     .text-center{
         text-align: center;
     }
 </style>
 
-<section class="page_404">
+<section class="page">
     <div class="container">
         <div class="row">
             <div class="col-sm-12 ">
@@ -63,14 +55,14 @@
 
                     </div>
 
-                    <div class="content_box_404">
+                    <div class="content_box">
                         <h3 class="h2">
-                            죄송합니다. 알 수 없는 에러가 발생했습니다.
+                            죄송합니다.
                         </h3>
 
-                        <p>문제가 계속 되면 고객센터에 문의해주세요</p>
+                        <p> 알 수 없는 에러가 발생했습니다.</p>
 
-                        <a href="https://secretzoo.site" class="link_404">홈으로</a>
+                        <a href="https://secretzoo.site" class="link_home">돌아가기</a>
                     </div>
                 </div>
             </div>
