--- a/frontend/client/src/index.css
+++ b/frontend/client/src/index.css
@@ -36,3 +36,18 @@ code {
 .rotate-y {
   animation: rotateY 0.5s ease-out forwards;
 }
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: lightgray; 
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: black;
+  border-radius: 6px;
+  border: 3px solid lightgray;
+}
+
