--- a/frontend/client/src/index.css
+++ b/frontend/client/src/index.css
@@ -12,7 +12,7 @@ body > iframe {
     format("opentype");
 }
 body {
-  background-image: url("./assets/img/3.png");
+  background-image: url("./assets/img/temp.webp");
   background-size: cover;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -53,4 +53,15 @@ code {
   background-color: black;
   border-radius: 6px;
   border: 3px solid lightgray;
+}
+
+body::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: -1;
 }
