--- a/frontend/client/src/index.css
+++ b/frontend/client/src/index.css
@@ -12,7 +12,7 @@ body > iframe {
     format("opentype");
 }
 body {
-  background-image: url("./assets/img/temp.webp");
+  background-image: url("./assets/img/3.png");
   background-size: cover;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
