--- a/frontend/client/src/index.css
+++ b/frontend/client/src/index.css
@@ -7,9 +7,25 @@ body > iframe {
 @font-face {
   font-family: "DNFBitBitv2";
   font-style: normal;
-  font-weight: 400;
+  font-weight: normal;
   src: url("//cdn.df.nexon.com/img/common/font/DNFBitBitv2.otf")
     format("opentype");
+}
+
+@font-face {
+  font-family: 'Maplestory';
+  font-weight: 300; 
+  font-style: normal; 
+  src: url(https://cdn.jsdelivr.net/gh/webfontworld/NEXONGothic/MaplestoryLight.woff2) format('woff2');
+  font-display: swap;
+}
+	
+@font-face {
+  font-family: 'Maplestory';
+  font-weight: 700; 
+  font-style: normal; 
+  src: url(https://cdn.jsdelivr.net/gh/webfontworld/NEXONGothic/MaplestoryBold.woff2) format('woff2');
+  font-display: swap;
 }
 body {
   background-image: url("./assets/img/3.png");
