--- a/frontend/client/src/components/play/playerView.css
+++ b/frontend/client/src/components/play/playerView.css
@@ -7,12 +7,13 @@
   }
   
   .item1 { top: 0; left: 0; }
-  .item2 { top: 0; left: 33.33%; }
-  .item3 { top: 0; left: 66.66%; }
-  .item4 { top: 33%; left: 0;}
-  .item5 { top: 33%; left: 66.66%; }
+  .item2 { top: 0; left: 36%; }
+  .item3 { top: 0; right: 0; }
+  .item4 { top: 33.33%; left: 0;}
+  .item5 { top: 33.33%; right: 0; }
   .item6 { top: 66.66%; left: 0; }
-  .item7 { top: 66.66%; left: 33.33% }
-  .item8 { top: 66.66%; left: 66.66% }
+  .item7 { top: 66.66%; left: 36% }
+  .item8 { top: 66.66%; right: 0 }
+  .item9 { top: 33.33%; left: 36% }
 
   
