--- a/frontend/client/src/components/play/playerView.css
+++ b/frontend/client/src/components/play/playerView.css
@@ -14,5 +14,6 @@
   .item6 { top: 66.66%; left: 0; }
   .item7 { top: 66.66%; left: 33.33% }
   .item8 { top: 66.66%; left: 66.66% }
+  .item9 { top: 33.33%; left: 33.33%}
 
   
