docs : 자신이 공격받을때 표시(answerSelectMyturn.jsx), pass카드 위치 변경

--- a/frontend/client/src/components/play/playerView.css
+++ b/frontend/client/src/components/play/playerView.css
@@ -12,8 +12,8 @@
   .item4 { top: 33.33%; left: 0;}
   .item5 { top: 33.33%; right: 0; }
   .item6 { top: 66.66%; left: 0; }
-  .item7 { top: 66.66%; left: 36% }
-  .item8 { top: 66.66%; right: 0 }
-  .item9 { top: 33.33%; left: 36% }
+  .item7 { top: 66.66%; left: 30%; }
+  .item8 { top: 66.66%; right: 0; }
+  .item9 { top: 33.33%; left: 39%; }
 
   
